Adding SDFlexUtils to the library
Adding SDFlexutils to the library

Change-Id: Iebf2f2d365a50a2b0dea7752f008d5ac652616f5
Depends-On: Icbf33095dadce12bb84ac458bcea8648be66799f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* Adding SDFlexUtils to the library
+* Adding tox.ini
 * Trivial change
 * Update README.md
 * required changes for library installation
