Secure boot enablement code in sdflexutils
Change-Id: I20c9c7780d8c477a7d8b1737dd524d4332601c96

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* Secure boot enablement code in sdflexutils
 * Adding SDFlexUtils to the library
 * Adding tox.ini
 * Trivial change
