--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 Mallikarjuna Reddy Kolagatla <mallikarjuna.reddy@hpe.com>
 Nisha Agarwal <nisha.agarwal@hpe.com>
-mvpnitesh <parimala.nitesh@hpe.com>
+nitesh-parimala <nitesh.parimala@hpe.com>
