Enablement of Bios Setting capabilities in SDFlexutils
Enablement of Bios Setting capabilities in SDFlexutils

Change-Id: I658c392b8b1db3f410a86224676fcbae3277e7b6

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 Mallikarjuna Reddy Kolagatla <mallikarjuna.reddy@hpe.com>
 Nisha Agarwal <nisha.agarwal@hpe.com>
-nitesh-parimala <nitesh.parimala@hpe.com>
+M V P Nitesh <nitesh.parimala@hpe.com>
