One letter change in READM.rst and minor updates to AUTHORS and ChangeLog
Change-Id: I0407596736d751c13c5433e8bea20e0bef9e3412

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Mallikarjuna Reddy Kolagatla <mallikarjuna.reddy@hpe.com>
 Nisha Agarwal <nisha.agarwal@hpe.com>
 M V P Nitesh <nitesh.parimala@hpe.com>
+kartikeyaj0 <kartikeya.jain@hpe.com>
