Removing pep8 errors
Removing pep8 errors

Change-Id: I0e9789a80220cc268fd20721b0ca8f68013e16df

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 CHANGES
 =======
 
+* Enabling Vmedia support for sdflex machines
+* Updating requirments.txt for Openstack Ussuri Release
+
+1.1.0
+-----
+
+* Setting Sushy version according to Openstack T release
 * Changes required for pypi packaging
 * Adding raid configuration support using storcli
 * Adding disk erase support using storcli
