Adding firmware update support for sdflex 280
This patch adds support for firmware update on sdflex 280 systems

Change-Id: I1863b9b2b694010b88f41fac316b5867c7222f96

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,14 @@
 CHANGES
 =======
 
+1.2.1
+-----
+
+* Adding firmware update support for sdflex 280
+
+1.2.0
+-----
+
 * Enabling Vmedia support for sdflex machines
 * Updating requirments.txt for Openstack Ussuri Release
 
