Adding firmware update support for sdflex 280
This patch adds support for firmware update on sdflex 280 systems

Change-Id: Iebe7d55e8a9f1ae1d6d67c75c6738bde8351db50

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,14 @@
 CHANGES
 =======
 
+1.1.1
+-----
+
+* Adding firmware update support for sdflex 280
+
+1.1.0
+-----
+
 * Changes required for pypi packaging
 * Adding raid configuration support using storcli
 * Adding disk erase support using storcli
